# krw_trendanalyse

./: .gitignore  README.md  pyproject.toml  trend_model.ipynb
docs/: conf.py  index.rst
docs/examples/: BRO_example.ipynb  aggregate_trends_example.ipynb  index.rst  trend_model.ipynb
krw_trendanalyse/: __init__.py  plots.py  trends.py
