[project]
name = "krw-trendanalyse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Davíd Brakenhoff", email = "d.brakenhoff@artesia-water.nl" }]
requires-python = ">=3.12"
dependencies = []


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
